2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications: use "gimp-remote" in place of "gimp"
	to allow the use of an existing instance (Closes: #99272)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add Objective-C support (patch from PUYDT Julien
	<julien.puydt@laposte.net>) (Closes: #126473)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: rename video/vivo to video/vnd.vivo, remove
	xanim and xmps as handlers for video files, mark a few strings
	for translation (Closes: #94214)

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added support for video/dv as per RFC 3189

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added audio/x-ms-wax (Windows Audio Playlist)
	mime-type

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: .m4a for MPEG-4 audio

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added MPEG-4 audio detection and mime-type
	(audio/x-m4a)

2003-11-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added type audio/x-ms-asf (seems to be used
	for audio-only ASF streams)

2003-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added Cinelerra editing sheets magic
	(Closes: #125489)

2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added image/pjpeg as a possible JPEG mime-type
	(Closes: #124409), translate the bitorrent and javascript entries
	now that the string freeze is over

2003-10-12  Christophe Fergeau  <teuf@gnome.org>

	* gnome-vfs-mime-magic: made ID3 sniffing more selective (closes
	  #124335) 

2003-10-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added BitTorrent mime-types and magic
